test/invalid-syntax/58182_calling_as_zeroary_function/callin_as_zeroary_function.agu
-- Author: 58182, Gabriel Henriques

let f (_) : Unit -> Int = let x : Int = let y : Int = 3
let result : Int = f()